# chrono-merkle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  README.md
.github/workflows/: ci.yml
.specstory/: .project.json
.specstory/history/: 2026-01-13_00-02Z-chronomerkleerror-type-not-found.md  2026-01-13_00-14Z-initial-testing.md  2026-01-13_00-16Z-chrono-merkle-terminals-file-context.md  2026-01-13_00-21Z-tree-construction-benchmarking-results.md  2026-01-13_02-31Z-chronomerkleerror-import-in-storage-rs.md
benches/: clockhash_integration.rs  tree_operations.rs
examples/: basic_usage.rs  blockchain_example.rs  clockhash_integration.rs  programmable_nodes.rs
src/: clockhash.rs  config.rs  constructors.rs  delta.rs  error.rs  hash.rs  lib.rs  node.rs  operations.rs  proof.rs  proofs.rs  rebuild.rs  security.rs  serde_impl.rs  sparse_index.rs  storage.rs  traits.rs  tree.rs  validation.rs  visualization.rs
src/tests/: mod.rs  tree_tests.rs
tests/: integration_tests.rs  proof_tests.rs
